Crash when rendering a second time after saving the image to disk #96756

Closed
opened 2022-03-24 13:52:44 +01:00 by Thomas Dinges · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon RX 5500 XT ATI Technologies Inc. 4.5.14761 Core Profile Context 21.30.23.04 30.0.13023.4001

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-24 12:01, hash: cee6af0056
Worked: 3.1

Caused by 8530e48f86

Short description of error
Blender crashes, when rendering again after saving the render to disk.

Exact steps for others to reproduce the error

  • Open Blender, press F12 to render (EEVEE or Cycles).
  • Save the image to disk.
  • Press F12 to render again. Blender freezes.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon RX 5500 XT ATI Technologies Inc. 4.5.14761 Core Profile Context 21.30.23.04 30.0.13023.4001 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-24 12:01, hash: `cee6af0056` Worked: 3.1 Caused by 8530e48f86 **Short description of error** Blender crashes, when rendering again after saving the render to disk. **Exact steps for others to reproduce the error** * Open Blender, press F12 to render (EEVEE or Cycles). * Save the image to disk. * Press F12 to render again. Blender freezes.
Author
Owner

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

yes I can confirm.

Is someone aware of this issue or already working on the fix? Otherwise I will do the bisect... (anyway, I'll do)

yes I can confirm. Is someone aware of this issue or already working on the fix? Otherwise I will do the bisect... (anyway, I'll do)
Author
Owner

@PratikPB2123 I guess it's a recent issue from the last few days, but haven't checked further yet.

@PratikPB2123 I guess it's a recent issue from the last few days, but haven't checked further yet.
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

I spent some time on bisecting but in the end I failed to find the exact commit.
Issue introduced somewhere between 3dc44f8c89 - 976c91cd77 (bisecting further gives build error to me :/)
I think recent changes from that area ([image_save.cc ]] or [ https:*developer.blender.org/rB6e4d2fa9140864a13356b07ffca082817822987f | image_format.cc ) has caused this
@brecht hi, can you check?

I spent some time on bisecting but in the end I failed to find the exact commit. Issue introduced somewhere between 3dc44f8c89ac - 976c91cd770f (bisecting further gives build error to me :/) I think recent changes from that area ([image_save.cc ]] or [[ https:*developer.blender.org/rB6e4d2fa9140864a13356b07ffca082817822987f | image_format.cc ](https:*developer.blender.org/rBb96462519f748fcf04028084354fbbf97eb8ce92)) has caused this @brecht hi, can you check?

Added subscriber: @Melkor-1

Added subscriber: @Melkor-1

I'm also having a crash problem. I just got a new laptop with R7 5800H CPU, 16GB RAM, RTX 3060 GDDR6

Every time my render is 80-90% complete, it just crashes after all those hours. I posted my crash report so I hope somebody will be able to know the solution to our problems.

I'm also having a crash problem. I just got a new laptop with R7 5800H CPU, 16GB RAM, RTX 3060 GDDR6 Every time my render is 80-90% complete, it just crashes after all those hours. I posted my crash report so I hope somebody will be able to know the solution to our problems.

This issue was referenced by 3c4947cdaa

This issue was referenced by 3c4947cdaa04ac0afa69157a1788b9022b20905e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-03-24 19:44:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96756
No description provided.