Fix T96756: Blender hanges on rendering after file save, after recent changes